--- a/customized-w3.css
+++ b/customized-w3.css
@@ -1,12 +1,13 @@
 ﻿/* W3.CSS 4.05 October 2017 by Jan Egil and Borge Refsnes */
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 /* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
-html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin: 0 5%}
+html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;scroll-behavior:smooth}body{margin:0}
 article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary{display:block}
 audio,canvas,progress,video{display:inline-block}progress{vertical-align:baseline}
 audio:not([controls]){display:none;height:0}[hidden],template{display:none}
 a{background-color:transparent;-webkit-text-decoration-skip:objects}
 a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}
+a:target::before {content: ""; display: block; height: 45px; /* fixed header height*/ margin-top: -45px; /* negative fixed header height */} /* best solution ever from https://stackoverflow.com/questions/4086107/fixed-page-header-overlaps-in-page-anchors*/
 dfn{font-style:italic}mark{background:#ff0;color:#000}
 small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}
 sub{bottom:-0.25em}sup{top:-0.5em}figure{margin:1em 40px}img{border-style:none}svg:not(:root){overflow:hidden}
@@ -24,10 +25,6 @@ legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}t
 [type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}
 ::-webkit-input-placeholder{color:inherit;opacity:0.54}
 ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
-/* customization by Burak Bastem */
-.burak-position{position:inherit}
-.burak-color{color:#fff!important;background-color:#009688!important}
-.burak-text-color{color:#009688!important}
 .w3-show-inline-block{}
 .w3-right{}
 /* End extract */
@@ -35,6 +32,9 @@ html,body{font-family:Verdana,sans-serif;font-size:14px;line-height:1.5}html{ove
 h1{font-size:32px}h2{font-size:26px}h3{font-size:22px}h4{font-size:20px}h5{font-size:17px}h6{font-size:16px}.w3-serif{font-family:serif}
 h1,h2,h3,h4,h5,h6{font-family:"Segoe UI",Arial,sans-serif;font-weight:400;margin:2px 0}.w3-wide{letter-spacing:4px}
 hr{border:0;border-top:2px solid #eee;margin:20px 0}
+/* customization by Burak Bastem */
+.custom-position{position:sticky;top:0px}
+.custom-image{width:250px;max-width:90%;height:auto}
 .w3-image{max-width:100%;height:auto}img{margin-bottom:-5px}a{color:inherit}
 .w3-table,.w3-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}.w3-table-all{border:1px solid #ccc}
 .w3-bordered tr,.w3-table-all tr{border-bottom:1px solid #ddd}.w3-striped tbody tr:nth-child(even){background-color:#f1f1f1}
@@ -79,26 +79,115 @@ hr{border:0;border-top:2px solid #eee;margin:20px 0}
 .w3-col.s1{width:8.33333%}.w3-col.s2{width:16.66666%}.w3-col.s3{width:24.99999%}.w3-col.s4{width:33.33333%}
 .w3-col.s5{width:41.66666%}.w3-col.s6{width:49.99999%}.w3-col.s7{width:58.33333%}.w3-col.s8{width:66.66666%}
 .w3-col.s9{width:74.99999%}.w3-col.s10{width:83.33333%}.w3-col.s11{width:91.66666%}.w3-col.s12{width:99.99999%}
-@media (min-width:970px){.w3-col.m1{width:8.33333%}.w3-col.m2{width:16.66666%}.w3-col.m3,.w3-quarter{width:24.99999%}.w3-col.m4,.w3-third{width:33.33333%}
-.w3-col.m5{width:41.66666%}.w3-col.m6,.w3-half{width:49.99999%}.w3-col.m7{width:58.33333%}.w3-col.m8,.w3-twothird{width:66.66666%}
-.w3-col.m9,.w3-threequarter{width:74.99999%}.w3-col.m10{width:83.33333%}.w3-col.m11{width:91.66666%}.w3-col.m12{width:99.99999%}
+@media (min-width:820px) and (min-height:455px) {
+  .w3-col.m1{width:8.33333%}
+  .w3-col.m2{width:16.66666%}
+  .w3-col.m3,.w3-quarter{width:24.99999%}
+  .w3-col.m4,.w3-third{width:33.33333%}
+  .w3-col.m5{width:41.66666%}
+  .w3-col.m6,.w3-half{width:49.99999%}
+  .w3-col.m7{width:58.33333%}
+  .w3-col.m8,.w3-twothird{width:66.66666%}
+  .w3-col.m9,.w3-threequarter{width:74.99999%}
+  .w3-col.m10{width:83.33333%}
+  .w3-col.m11{width:91.66666%}
+  .w3-col.m12{width:99.99999%}
+  .w3-show-inline-block{display:inline-block!important}
+  .w3-right{float:right!important}
+  .w3-col.l1{width:8.33333%}
+  .w3-col.l2{width:16.66666%}
+  .w3-col.l3{width:24.99999%}
+  .w3-col.l4{width:33.33333%}
+  .w3-col.l5{width:41.66666%}
+  .w3-col.l6{width:49.99999%}
+  .w3-col.l7{width:58.33333%}
+  .w3-col.l8{width:66.66666%}
+  .w3-col.l9{width:74.99999%}
+  .w3-col.l10{width:83.33333%}
+  .w3-col.l11{width:91.66666%}
+  .w3-col.l12{width:99.99999%}
+  /* customization by Burak Bastem */
+  .custom-position-2{position:sticky;top:0px}
+}
+.w3-content{max-width:980px;margin:auto}
+.w3-rest{overflow:hidden}
+.w3-cell-row{display:table;width:100%}
+.w3-cell{display:table-cell}
+.w3-cell-top{vertical-align:top}
+.w3-cell-middle{vertical-align:middle}
+.w3-cell-bottom{vertical-align:bottom}
+.w3-hide{display:none!important}
+.w3-show-block,.w3-show{display:block!important}
+.w3-show-inline-block{display:inline-block!important}
 /* customization by Burak Bastem */
-.burak-position{position:sticky;position:-webkit-sticky;top:0; vertical-align: middle}.w3-show-inline-block{display:inline-block!important}.w3-right{float:right!important}}
-@media (min-width:993px){.w3-col.l1{width:8.33333%}.w3-col.l2{width:16.66666%}.w3-col.l3{width:24.99999%}.w3-col.l4{width:33.33333%}
-.w3-col.l5{width:41.66666%}.w3-col.l6{width:49.99999%}.w3-col.l7{width:58.33333%}.w3-col.l8{width:66.66666%}
-.w3-col.l9{width:74.99999%}.w3-col.l10{width:83.33333%}.w3-col.l11{width:91.66666%}.w3-col.l12{width:99.99999%}}
-.w3-content{max-width:980px;margin:auto}.w3-rest{overflow:hidden}
-.w3-cell-row{display:table;width:100%}.w3-cell{display:table-cell}
-.w3-cell-top{vertical-align:top}.w3-cell-middle{vertical-align:middle}.w3-cell-bottom{vertical-align:bottom}
-.w3-hide{display:none!important}.w3-show-block,.w3-show{display:block!important}/*.w3-show-inline-block{display:inline-block!important}*/
-@media (max-width:600px){.w3-modal-content{margin:0 10px;width:auto!important}.w3-modal{padding-top:30px}
-.w3-dropdown-hover.w3-mobile .w3-dropdown-content,.w3-dropdown-click.w3-mobile .w3-dropdown-content{position:relative}
-.w3-hide-small{display:none!important}.w3-mobile{display:block;width:100%!important}.w3-bar-item.w3-mobile,.w3-dropdown-hover.w3-mobile,.w3-dropdown-click.w3-mobile{text-align:center}
-.w3-dropdown-hover.w3-mobile,.w3-dropdown-hover.w3-mobile .w3-btn,.w3-dropdown-hover.w3-mobile .w3-button,.w3-dropdown-click.w3-mobile,.w3-dropdown-click.w3-mobile .w3-btn,.w3-dropdown-click.w3-mobile .w3-button{width:100%}}
-@media (max-width:768px){.w3-modal-content{width:500px}.w3-modal{padding-top:50px}}
-@media (min-width:993px){.w3-modal-content{width:900px}.w3-hide-large{display:none!important}.w3-sidebar.w3-collapse{display:block!important}}
-@media (max-width:992px) and (min-width:601px){.w3-hide-medium{display:none!important}}
-@media (max-width:992px){.w3-sidebar.w3-collapse{display:none}.w3-main{margin-left:0!important;margin-right:0!important}}
+.custom-content{max-width:1440px;margin:auto}
+@media (max-width:600px){
+  .w3-modal-content{margin:0 10px;width:auto!important}
+  .w3-modal{padding-top:30px}
+  .w3-dropdown-hover.w3-mobile .w3-dropdown-content,.w3-dropdown-click.w3-mobile .w3-dropdown-content{position:relative}
+  .w3-hide-small{display:none!important}
+  .w3-mobile{display:block;width:100%!important}
+  .w3-bar-item.w3-mobile,.w3-dropdown-hover.w3-mobile,.w3-dropdown-click.w3-mobile{text-align:center}
+  .w3-dropdown-hover.w3-mobile,.w3-dropdown-hover.w3-mobile .w3-btn,.w3-dropdown-hover.w3-mobile .w3-button,.w3-dropdown-click.w3-mobile,.w3-dropdown-click.w3-mobile .w3-btn,.w3-dropdown-click.w3-mobile .w3-button{width:100%}
+}
+@media (max-width:768px){
+  .w3-modal-content{width:500px}
+  .w3-modal{padding-top:50px}
+}
+/* customization by Burak Bastem */
+.custom-hide-0{display:none!important}
+/* .custom-hide-1{display:none!important} */
+@media (min-width:820px) and (max-width:1179px) and (min-height:455px) {
+  .custom-hide-0{display:inline!important}
+  .custom-hide-2{display:none!important}
+}
+@media (min-width:820px) and (max-width:1141px) and (min-height:455px) {
+  .custom-hide-2{display:inline!important}
+  .custom-hide-3{display:none!important}
+}
+@media (min-width:820px) and (max-width:995px) and (min-height:455px) {
+  .custom-hide-3{display:inline!important}
+  .custom-hide-4{display:none!important}
+}
+/* @media (max-width:819px), (max-height:454px){
+  .custom-hide-1{display:inline!important}
+} */
+@media (max-width:797px) {
+  .custom-hide-0{display:inline!important}
+  .custom-hide-2{display:none!important}
+}
+@media (max-width:771px) {
+  .custom-hide-2{display:inline!important}
+  .custom-hide-3{display:none!important}
+}
+@media (max-width:674px) {
+  .custom-hide-3{display:inline!important}
+  .custom-hide-4{display:none!important}
+}
+@media (max-width:507px) {
+  .custom-hide-4{display:inline!important}
+  .custom-hide-5{display:none!important}
+}
+@media (max-width:388px) {
+  .custom-hide-5{display:inline!important}
+  .custom-hide-6{display:none!important}
+}
+@media (max-width:286px) {
+  .custom-hide-6{display:inline!important}
+  .custom-hide-7{display:none!important}
+}
+@media (min-width:900px){
+  .w3-modal-content{width:900px}
+  .w3-hide-large{display:none!important}
+  .w3-sidebar.w3-collapse{display:block!important}
+}
+@media (max-width:900px) and (min-width:601px){
+  .w3-hide-medium{display:none!important}
+}
+@media (max-width:900px){
+  .w3-sidebar.w3-collapse{display:none}
+  .w3-main{margin-left:0!important;margin-right:0!important}
+}
 .w3-top,.w3-bottom{position:fixed;width:100%;z-index:1}.w3-top{top:0}.w3-bottom{bottom:0}
 .w3-overlay{position:fixed;display:none;width:100%;height:100%;top:0;left:0;right:0;bottom:0;background-color:rgba(0,0,0,0.5);z-index:2}
 .w3-display-topleft{position:absolute;left:0;top:0}.w3-display-topright{position:absolute;right:0;top:0}
@@ -148,7 +237,7 @@ hr{border:0;border-top:2px solid #eee;margin:20px 0}
 .w3-padding-16{padding-top:16px!important;padding-bottom:16px!important}.w3-padding-24{padding-top:24px!important;padding-bottom:24px!important}
 .w3-padding-32{padding-top:32px!important;padding-bottom:32px!important}.w3-padding-48{padding-top:48px!important;padding-bottom:48px!important}
 .w3-padding-64{padding-top:64px!important;padding-bottom:64px!important}
-.w3-left{float:left!important}/*.w3-right{float:right!important}*/
+.w3-left{float:left!important}.w3-right{float:right!important}
 .w3-button:hover{color:#000!important;background-color:#ccc!important}
 .w3-transparent,.w3-hover-none:hover{background-color:transparent!important}
 .w3-hover-none:hover{box-shadow:none!important}
@@ -216,3 +305,6 @@ hr{border:0;border-top:2px solid #eee;margin:20px 0}
 .w3-border-white,.w3-hover-border-white:hover{border-color:#fff!important}
 .w3-border-black,.w3-hover-border-black:hover{border-color:#000!important}
 .w3-border-grey,.w3-hover-border-grey:hover,.w3-border-gray,.w3-hover-border-gray:hover{border-color:#bbb!important}
+/* customization by Burak Bastem */
+.custom-color{color:#fff!important;background-color:#009688!important}
+.custom-text-color{color:#009688!important}
