--- a/customized-w3.css
+++ b/customized-w3.css
@@ -33,7 +33,7 @@ h1{font-size:32px}h2{font-size:26px}h3{font-size:22px}h4{font-size:20px}h5{font-
 h1,h2,h3,h4,h5,h6{font-family:"Segoe UI",Arial,sans-serif;font-weight:400;margin:2px 0}.w3-wide{letter-spacing:4px}
 hr{border:0;border-top:2px solid #eee;margin:20px 0}
 /* customization by Burak Bastem */
-.custom-position{position:sticky;top:0px}
+.custom-position{position:sticky;-webkit-sticky;top:0px}
 .custom-image{width:250px;max-width:90%;height:auto}
 .w3-image{max-width:100%;height:auto}img{margin-bottom:-5px}a{color:inherit}
 .w3-table,.w3-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}.w3-table-all{border:1px solid #ccc}
@@ -107,7 +107,7 @@ hr{border:0;border-top:2px solid #eee;margin:20px 0}
   .w3-col.l11{width:91.66666%}
   .w3-col.l12{width:99.99999%}
   /* customization by Burak Bastem */
-  .custom-position-2{position:sticky;top:0px}
+  .custom-position-2{position:sticky;-webkit-sticky;top:0px}
 }
 .w3-content{max-width:980px;margin:auto}
 .w3-rest{overflow:hidden}
